[package]
name = "reusable_derive"
version = "0.1.0"
authors = ["Mihir Luthra <luthramihir708@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.52"
quote = "1.0.7"
proc-macro2 = "1.0.24"

